...
                            ),
                )

                Spacer(modifier = Modifier.width(dimens.space8))

                Text(
                    text = "TERMINAL SESSIONS",
                    style =
                        MaterialTheme.typography.titleMedium.copy(
                            fontWeight = FontWeight.Bold,
                        ),
                    color = MaterialTheme.colorScheme.onSurface,
                    maxLines = 1,
...
